cluster/global-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: global-ingress
  namespace: argocd
spec:
  ingressClassName: nginx
  rules:
    - host: a46a2f6333ed6425fa7cb6dd6c32054d-1887091215.ap-south-1.elb.amazonaws.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80

          - path: /app1
            pathType: Prefix
            backend:
              service:
                name: app1
                port:
                  number: 80

          - path: /app2
            pathType: Prefix
            backend:
              service:
                name: app2
                port:
                  number: 80
